fix: update z-index in clear button

--- a/packages/osc-ui/src/components/Autocomplete/autocomplete.scss
+++ b/packages/osc-ui/src/components/Autocomplete/autocomplete.scss
@@ -67,7 +67,7 @@
         &__input-clear-button-wrapper {
             position: absolute;
             top: 0;
-            z-index: -1;
+            z-index: 1;
             display: flex;
             align-items: center;
             justify-content: right;
@@ -78,6 +78,7 @@
         &__input-clear-button {
             position: relative;
             right: $space-3xl;
+            z-index: 2;
             cursor: pointer;
         }
 
